--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -70,7 +70,8 @@ body{
 
 main{
     position: absolute;
-    width: 100%;
+    /* width: 100%; */
+    width: calc(var(--w)*24);
     height: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
