--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -117,3 +117,10 @@ body:focus-within input,
 body:focus-within label {
     display: none;
 }
+
+#counter{
+    display: block;
+    color: white;
+    font-size: 20px;
+    border: 1px solid red;
+}
